--- a/style.css
+++ b/style.css
@@ -4,8 +4,17 @@ body {
     background-color: #0f0e0e;
 }
 
+header {
+    margin-top: 10em;
+    margin-bottom: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+}
+
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cabin', sans-serif;
     color: #750c1c;
     text-align: center;
     font-size: 7rem;
@@ -16,12 +25,32 @@ h2 {
     color: #e9e8e8;
     text-align: center;
     font-size: 1.5rem;
+    line-height: 3rem;
+    font-weight: 100;
 }
 
-header {
-    height: 100vh;
+h2 a {
+    color: #750c1c;
+    cursor: pointer;
+}
+
+h2 a:hover {
+    color: #c01831;
+}
+
+div {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    flex-flow: column;
+}
+
+.fab {
+    color: #750c1c;
+    font-size: 70px;
+    padding: 1rem;
+    cursor: pointer;
+}
+
+.fab:hover {
+    color: #c01831;
 }
