--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ header {
 }
 
 h1 {
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #750c1c;
     text-align: center;
     font-size: 7rem;
 }
 
 h2 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cabin', sans-serif;
     color: #e9e8e8;
     text-align: center;
     font-size: 1.5rem;
